--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -5,12 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{% block title %}Vehicle Rental System{% endblock %}</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+  
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
   <nav>
-    <div class="container">
-      <ul>
+    <div class="navbar">
+      <div class="ul">
         <li><a href="{{ url_for('home') }}"><i class="fas fa-home"></i> Home</a></li>
         {% if 'user_id' not in session and 'admin_id' not in session %}
           <li><a href="{{ url_for('login') }}"><i class="fas fa-sign-in-alt"></i> Login</a></li>
@@ -26,7 +27,7 @@
           <li><a href="{{ url_for('admin_dashboard') }}"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
           <li><a href="{{ url_for('logout') }}"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
         {% endif %}
-      </ul>
+      <div>
     </div>
   </nav>
 
