--- a/frontend/templates/login.html
+++ b/frontend/templates/login.html
@@ -1,21 +1,34 @@
+
 {% extends "base.html" %}
 {% block title %}User Login{% endblock %}
 {% block content %}
-    <h2>User Login</h2>
-    {% with messages = get_flashed_messages(with_categories=true) %}
-        {% if messages %}
-            {% for category, message in messages %}
-                <div class="alert alert-{{ category }}">
-                    {{ message }}
-                </div>
-            {% endfor %}
-        {% endif %}
-    {% endwith %}
-    <form method="POST">
-        <input type="email" name="email" placeholder="Email" required>
-        <input type="password" name="password" placeholder="Password" required>
-        <button type="submit">Login</button>
+
+
+
+<div class="login">
+
+    <div class="loginh1">
+        <h2>User Login</h2>
+    </div class="form-container">
+    <form method="POST" >
+        <div class="forminput">
+            <input type="email" name="email" placeholder="Email" required>
+            <br>
+            <br>
+            <input type="password" name="password" placeholder="Password" required>
+        </div>
+   <br>
+        <button type="submit" class="loginbutton">Login</button>
+
     </form>
     <br>
-    <a href="{{ url_for('signup') }}">Don't have an account? Signup</a>
+    <div>
+        <a href="{{ url_for('signup') }}" class="alternate">Don't have an account? Signup</a>
+    </div>
+    
+</div>
+
+
+<!-- <a href="{{ url_for('signup') }}">Don't have an account? Signup</a> -->
+
 {% endblock %}
