--- a/frontend/templates/user_dashboard.html
+++ b/frontend/templates/user_dashboard.html
@@ -15,9 +15,10 @@
             <div class="price">${{ vehicle[3] }}/day</div>
             <p>Model: {{ vehicle[1] }}</p>
             <p>Brand: {{ vehicle[2] }}</p>
-            <a href="{{ url_for('book_vehicle', vehicle_id=vehicle[0]) }}" class="btn btn-success">
-              <i class="fas fa-calendar-check"></i> Book Now
-            </a>
+            <!-- Keep everything exactly the same, just ensure the Book Now button links like this: -->
+    <a href="{{ url_for('book_vehicle', vehicle_id=vehicle[0]) }}" class="btn-book">
+        Book Now
+        </a>
           </div>
         </div>
       {% endfor %}
